--- a/Diagnostic_Assistant.ipynb
+++ b/Diagnostic_Assistant.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyON6+EQ232A1vh0liKyeqMn",
+      "authorship_tag": "ABX9TyNVlodcIszTaitaJUl6xFap",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,12 +78,15 @@
         "from PIL import Image\n",
         "import pathlib\n",
         "import mimetypes\n",
-        "client = genai.Client(api_key=\"your-API-KEY\") # Please input your Google Ai Studio API Key"
+        "client = genai.Client(api_key=\"AIzaSyCInBCFo4UcNACayGtBZCXe8XxpTRohFiA\") # Please input your Google Ai Studio API Key\n",
+        "google_search_tool = Tool(\n",
+        "    google_search = GoogleSearch()\n",
+        ")"
       ],
       "metadata": {
         "id": "ImiXB5enRhwr"
       },
-      "execution_count": 62,
+      "execution_count": 110,
       "outputs": []
     },
     {
@@ -117,7 +120,7 @@
       "metadata": {
         "id": "a3GisQo7xZvB"
       },
-      "execution_count": 63,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -156,7 +159,10 @@
         "10. If the uploaded images are non-medical, respond with the message \"This is not a valid medical image.  Please provide relevant patient details and medical images.\" Do not output JSON in that specific case.\n",
         "\n",
         "11. If the prompt has a question, answer that in \"ans_to_ques\".\n",
-        "11.  **Structured Output (MANDATORY):** Provide your response in a JSON format that conforms to the following structure:\n",
+        "\n",
+        "12. Search the google for articles on the most likely diagnosis from websites like \"Mayo Clinic\", \"WebMD\", \"AIIMS\", \"NIH(.gov)\".\n",
+        "\n",
+        "13.  **Structured Output (MANDATORY):** Provide your response in a JSON format that conforms to the following structure:\n",
         "\n",
         "```json\n",
         "{\n",
@@ -202,6 +208,7 @@
         "  \"biases\": [\n",
         "   {\"bias\": \"[Explanation of limitation]\", \"recommendation\": \"[Recommendation to obtain more information related to the specific bias]\"}\n",
         "  ],\n",
+        "  \"articles\": [\"Google suggestion\"]\n",
         "  \"confidence_level\": [Confidence Percentage (0-100)],\n",
         "  \"important_note\": \"This information is intended for informational and educational purposes only and does not constitute medical advice. It is essential to consult with a qualified healthcare professional for any health concerns and should not be used as a substitute for a consultation with a healthcare provider.\"\n",
         "}\n",
@@ -211,7 +218,7 @@
       "metadata": {
         "id": "vEBxRHydwwn7"
       },
-      "execution_count": 70,
+      "execution_count": 112,
       "outputs": []
     },
     {
@@ -226,16 +233,20 @@
         "  prompt = \"Just give output based on image.\"\n",
         "if len(images) == 0:\n",
         "    response = client.models.generate_content(\n",
-        "  model=\"gemini-1.5-pro\",\n",
-        "  contents=[prompt],\n",
-        "  config=types.GenerateContentConfig(\n",
-        "        system_instruction=sys_ins, temperature = 0.4))\n",
+        "    model=\"gemini-2.0-flash\",\n",
+        "    contents=[prompt],\n",
+        "    config=types.GenerateContentConfig(\n",
+        "          system_instruction=sys_ins, temperature = 1,\n",
+        "          tools=[google_search_tool],\n",
+        "          response_modalities=[\"TEXT\"]))\n",
         "else:\n",
         "    response = client.models.generate_content(\n",
-        "    model=\"gemini-1.5-pro\",\n",
+        "    model=\"gemini-2.0-flash\",\n",
         "    contents=[prompt] + images,\n",
         "    config=types.GenerateContentConfig(\n",
-        "          system_instruction=sys_ins, temperature = 0.4))"
+        "          system_instruction=sys_ins, temperature = 1,\n",
+        "          tools=[google_search_tool],\n",
+        "        response_modalities=[\"TEXT\"]))"
       ],
       "metadata": {
         "id": "oLzFk6RKlBF6"
@@ -259,10 +270,10 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "kKQqxsZBCcry"
+        "id": "mSMZ3BVfn83F"
       },
       "execution_count": null,
       "outputs": []
     }
   ]
-}Appending more data from Colab!
+}
